Removed babel-node since not executing
* Also, switched back to start (instead of cli) since most people won't have that alias

--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.39",
-    "@babel/node": "^7.0.0-beta.39",
     "@babel/preset-env": "^7.0.0-beta.39",
     "ava": "^1.0.0-beta.1",
     "chmod": "^0.2.1"
   },
   "scripts": {
-    "cli": "./cli.js unicorns --rainbow",
+    "start": "./cli.js unicorns --rainbow",
     "test": "ava"
   },
   "babel": {
