--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "cli.js",
   "license": "MIT",
+  "dependencies": {
+    "chalk": "^2.3.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.39",
     "@babel/preset-env": "^7.0.0-beta.39",
@@ -10,7 +13,7 @@
     "chmod": "^0.2.1"
   },
   "scripts": {
-    "start": "./cli.js unicorns --rainbow",
+    "start": "./cli.js -s",
     "test": "ava"
   },
   "babel": {
@@ -24,8 +27,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {
-    "chalk": "^2.3.1"
   }
 }
