--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "main": "cli.js",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^2.3.1"
+    "chalk": "^2.3.1",
+    "repo-genesis": "^0.5.8"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.39",
     "@babel/preset-env": "^7.0.0-beta.39",
     "ava": "^1.0.0-beta.1",
-    "chmod": "^0.2.1"
+    "chmod": "^0.2.1",
+    "fs-extra": "^5.0.0"
   },
   "scripts": {
-    "start": "./cli.js -s",
     "test": "ava"
   },
   "babel": {
