--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.5.2",
   "main": "cli.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/servexyz/repo-genesis-cli"
+  },
   "dependencies": {
     "chalk": "^2.3.1",
     "repo-genesis": "^0.5.8"
