--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "https://github.com/servexyz/repo-genesis-cli"
   },
+  "files": ["cli.js"],
   "dependencies": {
     "chalk": "^2.3.1",
     "meow": "^4.0.0",
