--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
   "keywords": [
     "servexyz",
     "NSTAR",
-    "node-starter"
+    "repo-genesis",
+    "monoliths",
+    "git clone",
+    "clone repository",
+    "repositories",
+    "dependency remover",
+    "dependency installer"
   ],
   "repository": {
     "type": "git",
