--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "meow": "^5.0.0",
-    "repo-genesis-lib": "^2.0.2"
+    "repo-genesis-lib": "^2.0.4"
   },
   "scripts": {
     "start": "npm run dev",
@@ -69,6 +69,26 @@
     "ci:local:cache:install": "docker pull verdaccio/verdaccio",
     "ci:local:cache:run": "docker run -it --rm --name verdaccio -p 4873:4873 verdaccio/verdaccio",
     "ci:prepare": "npm install -g trevor gnomon"
+  },
+  "repogen": {
+    "dir": "sandbox",
+    "repos": [
+      {
+        "plat": "github.com",
+        "space": "servexyz",
+        "repo": "get-pkg-prop",
+        "dir": "modules",
+        "sym": "gpp"
+      },
+      {
+        "space": "servexyz",
+        "repo": "tacker",
+        "sym": "tkr"
+      },
+      {
+        "servexyz": "paths-exist"
+      }
+    ]
   },
   "ava": {
     "require": [
